Merging the new runtime runtime directory